manifests/grafana/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: jovian-prod
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: grafana-http
      protocol: TCP
      name: grafana-http
